<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:background="@color/colorPrimaryDark"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView1"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:src="@drawable/result" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            android:textSize="25dp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textColor="#437C17"/>
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score:           "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/addscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:text="Question:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/addques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/addlevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginRight="27dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:paddingRight="20dp"
            android:text="Date:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/adddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Subtraction"
            android:textSize="25dp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textColor="#437C17"/>
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score:           "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/subscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:text="Question:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/subques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/sublevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginRight="27dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="Date:     "
            android:layout_marginLeft="25dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/subdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="25dp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textColor="#437C17" />
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score:           "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/divscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:text="Question:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/divques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/divlevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginRight="27dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="Date:     "
            android:layout_marginLeft="25dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/divdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Multiplication"
            android:textSize="25dp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textColor="#437C17" />
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score:           "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/mulscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:text="Question:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/mulques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/mullevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginRight="27dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="Date:     "
            android:layout_marginLeft="25dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/muldate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        />

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mixed_Quiz"
            android:textSize="25dp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textColor="#437C17"/>
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score:           "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/mixscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:text="Question:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/mixques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level:     "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/mixlevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_marginRight="27dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="Date:     "
            android:layout_marginLeft="25dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/mixdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />
    </LinearLayout>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        />
    <Button
        android:id="@+id/goHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:soundEffectsEnabled="false"
        android:text="Back"
        android:textColor="@color/text_color_button" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line1"
        />

</LinearLayout>

</ScrollView>
